Version 17.4.0
--------------
    * added --keep_going which continues exhasting tasks from the queue even
      on failures. This can be useful if you want to collect all possible errors
      in a single please build.

Version 17.3.1
--------------
    * Fixed `plz query somepath` to not hang in the face of a graph cycle (#2893)
    * Fix stripping in text_file (#2895)

Version 17.3.0
--------------
    * REX: fix issue with downloading the outputs of filegroups with remote execution (#2885)
    * Added reduce builtin to the build language (#2880)
    * Don't automatically download targets queued for subinclue during remote execution (#2889)

Version 17.2.3
--------------
    * Improve locking logic around downloading targets for multiple concurrent plz executions

Version 17.2.2
--------------
    * `format`: avoid unneeded parentheses around `in`/`not in` expressions (#2871)
    * Pass correct output of uname -a (#2868)
    * Fix occasional hang when some targets are not queued

Version 17.2.1
---------------
    * Better support preloaded subincludes that themselves subinclude (#2859)

Version 17.2.0
---------------
    * Added hostinfo prometheus counter (#2835)
    * Fix formatting for timed out message (#2845)
    * Strip >= from the PLZ_VERSION variable (#2854)
    * Add optimisation profile and enable pgo (#2850)

Version 17.1.0
---------------
    * Handle function calls in `isinstance` (#2796)
    * Allow `plz query deps` to outout the deps as a dotviz graph (#2801)
    * Added a `--notest` flag to `plz watch`, which will then only build test targets.
      This can be useful to do a quick smoke test. (#2810)
    * Handle malformed input better in the language server to avoid crashes (#2810)
    * Improve performance by implementing the `any` and `all` list functions in
      Go (#2813)
    * Added `--env` to `plz debug` to allow setting env variables in the debug
      environment (#2819)
    * Support function parameter aliases in `plz fmt` (#2822)